--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,8 @@
         <%= link_to 'Create task', new_task_path, class: "btn btn-success" %>
       </div>
     </nav>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
     <div class="container p-4">
       <div class="row d-flex justify-content-center">
         <div class="col-12 col-lg-6">
