--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,21 +13,10 @@
   </head>
 
   <body>
-    <nav class="navbar bg-dark">
-      <h3 class="m-0 p-3"><%= link_to 'My task manager', tasks_path, class: "text-light" %></h3>
-      <div class="p-3">
-        <%= link_to 'Create task', new_task_path, class: "btn btn-success" %>
-      </div>
-    </nav>
+    <%= render 'partials/navbar' %>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-    <div class="container p-4">
-      <div class="row d-flex justify-content-center">
-        <div class="col-12 col-lg-6">
-          <%= yield %>
-        </div>
-      </div>
-    </div>
+    <%= yield %>
   </body>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </html>
