--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,2 +1,8 @@
-<h2 class="mb-3">Editing task #<%= @task.id %>: <%= @task.title %></h2>
-<%= render 'tasks/form', task: @task %>
+<div class="container p-4">
+  <div class="row d-flex justify-content-center">
+    <div class="col-12 col-lg-6">
+      <h2 class="mb-3">Editing task #<%= @task.id %>: <%= @task.title %></h2>
+      <%= render 'tasks/form', task: @task %>
+    </div>
+  </div>
+</div>
