--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,34 +2,21 @@
   <div class="row d-flex justify-content-center">
     <div class="col-12 col-lg-6">
       <h2>Sign up</h2>
-
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), data: {turbo: false}) do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
-
-        <div class="field">
-          <%= f.label :email %><br />
-          <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-        </div>
-
-        <div class="field">
-          <%= f.label :password %>
+          <%= f.input :email, required: true, autofocus: true, input_html: { autocomplete: "email" } %><br />
+          <%= f.input :password, required: true, input_html: { autocomplete: "new-password" } %>
           <% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %> characters minimum)</em>
+          <div class="form-text">(<%= @minimum_password_length %> characters minimum)</div>
           <% end %><br />
-          <%= f.password_field :password, autocomplete: "new-password" %>
-        </div>
-
-        <div class="field">
-          <%= f.label :password_confirmation %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-        </div>
-
-        <div class="actions">
-          <%= f.submit "Sign up" %>
+          <%= f.input :password_confirmation, required: true, input_html: { autocomplete: "new-password" } %><br />
+        <div class="actions border-bottom">
+          <%= f.submit "Sign up", class:"btn btn-primary mb-3" %>
         </div>
       <% end %>
-
-      <%= render "devise/shared/links" %>
+      <div class="mt-3">
+        <%= render "devise/shared/links" %>
+      </div>
     </div>
   </div>
 </div>
