--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -2,21 +2,16 @@
   <div class="row d-flex justify-content-center">
     <div class="col-12 col-lg-6">
       <h2>Forgot your password?</h2>
-
       <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
-
-        <div class="field">
-          <%= f.label :email %><br />
-          <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-        </div>
-
-        <div class="actions">
-          <%= f.submit "Send me reset password instructions" %>
+        <%= f.input :email, autofocus: true, required: true, html_input: {  autocomplete: "email" } %><br />
+        <div class="actions border-bottom">
+          <%= f.submit "Send me reset password instructions", class:"btn btn-primary mb-3" %>
         </div>
       <% end %>
-
-      <%= render "devise/shared/links" %>
+      <div class="mt-3">
+        <%= render "devise/shared/links" %>
+      </div>
     </div>
   </div>
 </div>
