--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,22 @@
-@import "bootstrap/scss/bootstrap";
 @import "font-awesome";
+@import "config/colors";
+@import "config/fonts";
+@import "config/bootstrap_variables";
+@import "bootstrap/scss/bootstrap";
+@import "config/components/logo";
+@import "pages/home";
 
- a {
+
+a {
    text-decoration: none!important;
- }
+}
+
+body {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.list {
+  list-style-type: none;
+}
