--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="container p-4">
   <div class="row d-flex justify-content-center">
     <div class="col-12 col-lg-6 d-flex flex-column align-items-center">
-      <h1>Minimalist task manager</h1>
+      <h1 class="text-center">Minimalist task manager</h1>
       <ul class="list">
         <li>
         <div class="d-flex">
