--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,8 +4,10 @@
       <h2>Sign up</h2>
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), data: {turbo: false}) do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
-          <%= f.input :email, required: true, autofocus: true, input_html: { autocomplete: "email" } %><br />
-          <%= f.input :password, required: true, input_html: { autocomplete: "new-password" } %>
+          <%= f.input :email, required: true, autofocus: true %><br />
+          <%= f.input :first_name, required: true %><br />
+          <%= f.input :last_name, required: true %><br />
+          <%= f.input :password, required: true %>
           <% if @minimum_password_length %>
           <div class="form-text">(<%= @minimum_password_length %> characters minimum)</div>
           <% end %><br />
