--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,8 +2,10 @@
   <div class="row d-flex justify-content-center">
     <div class="col-12 col-lg-6">
       <% if @tasks.length.nonzero? %>
-        <% task = @tasks.length == 1 ? "task" : "tasks"  %>
-        <h2 class="mb-3"><%= @tasks.length %> <%= task %> </h2>
+        <div class="d-flex justify-content-between align-items-center mb-3">
+          <h2><%= pluralize(@tasks.length, 'task') %></h2>
+          <%= link_to "New task", new_task_path, class:"btn btn-outline-primary" %>
+        </div>
         <div class="progress mb-3" style="height: 20px;">
             <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" id="progressbar" style="width: <%= @progress %>%;" aria-valuenow=<%= @progress %> aria-valuemin="0" aria-valuemax="100"><small><%= @progress.to_i %>%</small></div>
             <% if @progress == 100.0 %>
