--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,16 +1,10 @@
-<%= form_for(@task) do |f| %>
-  <div class="display-block mb-3">
+<%= simple_form_for(@task) do |f| %>
+  <div class="d-flex">
     <%= f.check_box :completed, class: "form-check-input" %>
     <%= f.label :completed, class: "form-label my-0 mx-1" %>
-  </div>
-  <div class="mb-3">
-    <%= f.label :title, class: "form-label" %>
-    <%= f.text_field :title, class: "form-control" %>
-  </div>
-  <div class="mb-3">
-    <%= f.label :details, class: "form-label" %>
-    <%= f.text_area :details, class: "form-control" %>
-  </div>
+  </div><br />
+  <%= f.input :title %><br />
+  <%= f.input :details %><br />
   <% if task.persisted? %>
     <%= f.submit class: "btn btn-warning", value: "Update!" %>
   <% else %>
