--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
-<div class="container p-4">
-  <div class="row d-flex justify-content-center">
+<div class="container d-flex flex-grow-1">
+  <div class="w-100 row d-flex justify-content-center align-self-center">
     <div class="col-12 col-lg-6 d-flex flex-column align-items-center">
       <h1 class="text-center">Minimalist task manager</h1>
       <ul class="list">
