--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,10 +1,18 @@
 <%= simple_form_for(@task) do |f| %>
-  <div class="d-flex">
+  <div class="d-flex mb-3">
     <%= f.check_box :completed, class: "form-check-input" %>
     <%= f.label :completed, class: "form-label my-0 mx-1" %>
-  </div><br />
-  <%= f.input :title %><br />
-  <%= f.input :details %><br />
+  </div>
+  <div class="mb-3">
+    <%= f.label :priority, class: "form-label my-0 mx-1" %>
+    <%= range_field :task, :priority, in: 1..5, class:"w-100" %>
+  </div>
+  <div class="mb-3">
+    <%= f.input :title %>
+  </div>
+  <div class="mb-3">
+    <%= f.input :details %>
+  </div>
   <% if task.persisted? %>
     <%= f.submit class: "btn btn-warning", value: "Update!" %>
   <% else %>
