--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,11 +1,20 @@
 <div class="container p-4">
   <div class="row d-flex justify-content-center">
     <div class="col-12 col-lg-6">
-      <% if @tasks.length.nonzero? %>
         <div class="d-flex justify-content-between align-items-center mb-3">
           <h2><%= pluralize(@tasks.length, 'task') %></h2>
           <%= link_to "New task", new_task_path, class:"btn btn-outline-primary" %>
         </div>
+        <div class="mb-3">
+          <%= form_for tasks_path, class:"d-flex", method: :get do |f| %>
+            <%= text_field_tag :query,
+                               params[:query],
+                               class:"form-control me-2",
+                               placeholder:"Find a task..." %>
+            <%=  submit_tag "Search", class:"btn btn-primary" %>
+          <% end %>
+        </div>
+      <% if @tasks.length.nonzero? %>
         <div class="progress mb-3" style="height: 20px;">
             <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" id="progressbar" style="width: <%= @progress %>%;" aria-valuenow=<%= @progress %> aria-valuemin="0" aria-valuemax="100"><small><%= @progress.to_i %>%</small></div>
             <% if @progress == 100.0 %>
@@ -46,8 +55,9 @@
         </ul>
       <% else %>
         <div class="d-flex flex-column justify-content-center align-items-center">
-          <span class="my-3">You don't have any task yet!</span>
-          <%= link_to "New task", new_task_path, class:"btn btn-outline-primary" %>
+          <span class="my-3">
+            <%= params[:query] ? 'No task found' : 'You don\'t have any task yet!' %>
+          </span>
         </div>
       <% end %>
     </div>
