making navbar sticky on top

--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar bg-dark py-0">
+<nav class="navbar position-sticky top-0 py-0 bg-dark">
   <%= render 'partials/logo' %>
   <div class="p-3 d-flex align-items-center">
     <% if user_signed_in? %>
