--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="row d-flex justify-content-center">
     <div class="col-12 col-lg-6">
       <h2 class="mb-3">Editing task #<%= @task.id %>: <%= @task.title %></h2>
-      <%= render 'tasks/form', task: @task %>
+      <%= render 'partials/task_form', task: @task %>
     </div>
   </div>
 </div>
