--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -3,7 +3,16 @@
     <div class="col-12 col-lg-6">
         <div class="d-flex justify-content-between align-items-center mb-3">
           <h2><%= pluralize(@tasks.length, 'task') %></h2>
-          <%= link_to "New task", new_task_path, class:"btn btn-outline-primary" %>
+          <div>
+            <%= link_to new_task_path, class:"btn btn-outline-primary" do %>
+              <i class="fa-solid fa-plus"></i>
+              <span>task</span>
+            <% end %>
+            <%= link_to new_group_path, class:"btn btn-outline-primary" do %>
+              <i class="fa-solid fa-plus"></i>
+              <span>group</span>
+            <% end %>
+          </div>
         </div>
         <div class="mb-3">
           <%= form_for tasks_path, class:"d-flex", method: :get do |f| %>
@@ -11,7 +20,9 @@
                                params[:query],
                                class:"form-control me-2",
                                placeholder:"Find a task..." %>
-            <%=  submit_tag "Search", class:"btn btn-primary" %>
+            <%=  button_tag(type:"submit", class:"btn btn-primary") do %>
+              <i class="fa-solid fa-magnifying-glass"></i>
+            <% end %>
           <% end %>
         </div>
       <% if @tasks.length.nonzero? %>
