--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -56,12 +56,11 @@
                 </div>
               </div>
               <div class="d-flex flex-row align-items-center">
-                <div class="mx-2">
-                  <%= link_to "Edit", edit_task_path(task), class: "btn btn-outline-warning btn-sm" %>
-                </div>
                 <div>
-                  <%= link_to "Delete", task_path(task), class: "btn btn-outline-danger btn-sm",
-                  data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
+                  <%= link_to task_path(task), class:"text-danger",
+                  data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} do %>
+                    <i class="fa-solid fa-trash"></i>
+                  <% end %>
                 </div>
               </div>
             </li>
