--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -41,18 +41,24 @@
         <ul class="list-group">
           <% @tasks.each do |task| %>
             <li class="list-group-item d-flex justify-content-between">
-              <div class="d-flex flex-row">
+              <div class="d-flex flex-grow-1">
                 <% if task.completed %>
                   <input type="checkbox" class="form-check-input align-self-center me-1" checked=true disabled>
                 <% else %>
                   <input type="checkbox" class="form-check-input align-self-center me-1" disabled>
                 <% end %>
-                <div class="d-flex flex-column mx-2">
-                  <%= link_to task.title, task_path(task) %>
-                  <div class="d-flex align-items-center opacity-25">
-                    <i class="fa-solid fa-layer-group me-1"></i>
-                    <small><%= task.group.name %></small>
+                <div class="d-flex flex-row mx-2">
+                  <div class="mb-2">
+                    <%= link_to task.title, edit_task_path(task), class:"fs-3" %>
+                    <div class="opacity-50">
+                      <%= task.details %>
+                    </div>
                   </div>
+                </div>
+                <div class="d-flex flex-column flex-grow-1 justify-content-center align-items-end me-3 opacity-25">
+                  <small><%= task.priority %>/5</small>
+                  <small><%= task.group.name %></small>
+                  <small><%= task.created_at.strftime("On %a. %d %B") %></small>
                 </div>
               </div>
               <div class="d-flex flex-row align-items-center">
