--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container p-4">
   <div class="row d-flex justify-content-center">
     <div class="col-12 col-lg-6">
-      <h2 class="mb-3">Editing task #<%= @task.id %>: <%= @task.title %></h2>
+      <h2 class="mb-3"><%= @task.title %></h2>
       <%= render 'partials/task_form', task: @task %>
     </div>
   </div>
