--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -33,7 +33,7 @@
                     <input type="checkbox" class="form-check-input align-self-center me-1" data-tasks-target="completed" data-action="change->tasks#toggle" <% if task.completed %> checked <% end %>>
                   <div class="d-flex flex-row mx-2">
                     <div class="mb-2">
-                      <%= link_to task.title, edit_task_path(task), class:"fs-3" %>
+                      <%= link_to task.title, edit_task_path(task), class:"fs-3", data: {tasks_target:"title"} %>
                       <div class="opacity-50">
                         <%= task.details %>
                       </div>
