--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -39,7 +39,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="d-flex flex-column flex-grow-1 justify-content-center align-items-end me-3 opacity-25">
+                  <div class="d-flex flex-column flex-grow-1 justify-content-center align-items-end text-end me-3 opacity-25">
                     <small><%= task.priority %>/5</small>
                     <small><%= task.group.name %></small>
                     <small><%= task.created_at.strftime("On %a. %d %B") %></small>
