--- a/app/views/partials/_task_form.html.erb
+++ b/app/views/partials/_task_form.html.erb
@@ -14,7 +14,7 @@
     <%= f.input :details %>
   </div>
   <div class="mb-3">
-    <%= f.association :group, collection: @groups %>
+    <%= f.association :group, collection: @groups, include_blank: false %>
   </div>
   <% if task.persisted? %>
     <%= f.submit class: "btn btn-warning", value: "Update!" %>
