--- a/app/views/partials/_logo.html.erb
+++ b/app/views/partials/_logo.html.erb
@@ -1,4 +1,4 @@
-<% path = user_signed_in? ? tasks_path : root_path %>
+<% path = user_signed_in? ? tasks_path : home_path %>
 
 <%= link_to path, class:"fs-3 m-0 text-light" do %>
   <div class="logo d-flex align-items-center p-3">
