--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -43,7 +43,7 @@
                   <div class="d-flex flex-column flex-grow-1 justify-content-center align-items-end text-end me-3 opacity-25">
                     <small><%= @priorities[idx] %></small>
                     <small><%= task.group.name %></small>
-                    <small><%= task.created_at.strftime("On %a. %d %B") %></small>
+                    <small><%= time_ago_in_words(task.created_at, include_seconds: true) %> ago</small>
                   </div>
                 </div>
                 <div class="d-flex flex-row align-items-center">
