--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,12 @@
 <div class="container p-4">
   <div class="row d-flex justify-content-center">
     <div class="col-12 col-lg-6">
-      <h2><%= current_user.first_name %> <%= current_user.last_name %></h2>
+      <div class="d-flex justify-content-between align-items-center mb-3">
+        <h2 class="mb-0"><%= current_user.first_name %> <%= current_user.last_name %></h2>
+        <%= link_to destroy_user_session_path, class:"fs-3 text-dark opacity-50", data: {turbo_method: "delete"}  do %>
+          <i class="fa-solid fa-arrow-right-from-bracket"></i>
+        <% end %>
+      </div>
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), data: {turbo: false}) do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
         <%= f.input :email, autofocus: true %><br />
