--- a/app/views/partials/_initials_avatar.html.erb
+++ b/app/views/partials/_initials_avatar.html.erb
@@ -1,1 +1,3 @@
-<%= current_user.first_name.chars.first+current_user.last_name.chars.first %>
+<div>
+  <%= current_user.first_name.chars.first+current_user.last_name.chars.first %>
+</div>
