--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,7 @@
 @import "config/bootstrap_variables";
 @import "bootstrap/scss/bootstrap";
 @import "config/components/logo";
+@import "config/components/avatar";
 @import "pages/home";
 
 
