--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -2,8 +2,8 @@
   <%= render 'partials/logo' %>
   <div class="p-3 d-flex align-items-center">
     <% if user_signed_in? %>
-      <%= link_to edit_user_registration_path do %>
-        <span class="fs-5 text-light me-3"><%= render 'partials/initials_avatar' %></span>
+      <%= link_to edit_user_registration_path, class:"avatar" do %>
+        <%= render 'partials/initials_avatar' %>
       <% end %>
     <% else %>
       <% unless current_page?(controller: "devise/sessions", action: "new") %>
