--- a/app/views/partials/_logo.html.erb
+++ b/app/views/partials/_logo.html.erb
@@ -1,7 +1,7 @@
 <% path = user_signed_in? ? tasks_path : home_path %>
 
 <%= link_to path, class:"fs-3 m-0 text-light" do %>
-  <div class="logo d-flex align-items-center p-3">
+  <div class="logo d-flex align-items-center">
     <i class="fa-solid fa-list-check fa-white me-2 opacity-50"></i>
     <div>Tidi</div>
   </div>
