--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,13 +1,15 @@
-<nav class="navbar position-sticky top-0 py-0 bg-dark">
-  <%= render 'partials/logo' %>
-  <div class="p-3 d-flex align-items-center">
+<nav class="navbar position-sticky top-0 py-2 px-3 bg-primary shadow-sm">
+  <div class="p-1">
+    <%= render 'partials/logo' %>
+  </div>
+  <div class="d-flex align-items-center">
     <% if user_signed_in? %>
       <%= link_to edit_user_registration_path, class:"avatar" do %>
         <%= render 'partials/initials_avatar' %>
       <% end %>
     <% else %>
       <% unless current_page?(controller: "devise/sessions", action: "new") %>
-        <%= link_to "Log in", new_user_session_path, class:"btn btn-primary"  %>
+        <%= link_to "Log in", new_user_session_path, class:"btn btn-outline-dark"  %>
       <% end %>
     <% end %>
   </div>
