--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,7 @@
 @import "bootstrap/scss/bootstrap";
 @import "config/components/logo";
 @import "config/components/avatar";
+@import "config/components/navbar";
 @import "pages/home";
 
 
