--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,4 +1,6 @@
-<nav class="navbar position-sticky top-0 py-2 px-3 bg-primary shadow-sm">
+<nav class="navbar navbar-transparent position-sticky top-0 py-2 px-3"
+     data-controller="navbar"
+     data-action="scroll@window->navbar#updateNavbar"
   <div class="p-1">
     <%= render 'partials/logo' %>
   </div>
