adding grey and changing light-grey variables values

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,4 +1,5 @@
 $blue: rgb(109, 167, 255);
 $green: rgb(151, 209, 103);
-$light-grey: rgb(205, 205, 205);
+$grey: rgb(205, 205, 205);
+$light-grey: rgb(237, 237, 237);
 $dark-grey: rgb(83, 83, 83);
