--- a/app/assets/stylesheets/config/components/_avatar.scss
+++ b/app/assets/stylesheets/config/components/_avatar.scss
@@ -4,7 +4,7 @@
   align-items: center;
   width: 35px;
   height: 35px;
-  background-color: white;
+  background-color: $light-grey;
   color: $dark-grey;
   border-radius: 50%;
 }
