--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,5 +1,6 @@
 $blue: rgb(109, 167, 255);
 $green: rgb(151, 209, 103);
 $grey: rgb(205, 205, 205);
-$light-grey: rgb(237, 237, 237);
+$medium-grey: rgb(230, 230, 230);
+$light-grey: rgb(250, 250, 250);
 $dark-grey: rgb(83, 83, 83);
