injecting minisearch in navbar, on scroll

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,7 @@
 @import "config/components/logo";
 @import "config/components/avatar";
 @import "config/components/navbar";
+@import "config/components/search";
 @import "pages/home";
 
 
