--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -15,16 +15,7 @@
           </div>
         </div>
         <div class="mb-5">
-          <%= form_for tasks_path, class:"d-flex", method: :get do |f| %>
-            <%= text_field_tag :query,
-                               params[:query],
-                               class:"form-control me-2",
-                               placeholder:"Find a task..." %>
-            <%= select_tag :group, options_from_collection_for_select(@groups, 'id', 'name', selected:params[:group]), { include_blank: "All groups", class:"form-select me-2" } %>
-            <%=  button_tag(type:"submit", class:"btn btn-primary") do %>
-              <i class="fa-solid fa-magnifying-glass"></i>
-            <% end %>
-          <% end %>
+          <%= render 'partials/search' %>
         </div>
         <% if @tasks.length.nonzero? %>
           <ul class="list-group">
