added '!' to 'No task found!'

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -52,7 +52,7 @@
         <% else %>
           <div class="d-flex flex-column justify-content-center align-items-center">
             <span class="my-3">
-              <%= params[:query] ? 'No task found' : 'You don\'t have any task yet!' %>
+              <%= params[:query] ? 'No task found!' : 'You don\'t have any task yet!' %>
             </span>
           </div>
         <% end %>
