changing body font

--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,3 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;500;700&family=Archivo:wght@300;500;700&display=swap');
 
 $headers-font: 'IBM Plex Mono', monospace;
+$body-font: 'Archivo', sans-serif;
